--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>kowm - Home</title>
+<title>kowm - About kowm</title>
 <style type="text/css" media="screen">@import "css/acol_base.css";</style>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="Content-Language" content="en-us">
+<meta charset="utf-8">
 </head>
 <body>
-<center><p>
 <div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">kowm Overview</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm">kowm Details</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">kowm Overview</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm.html">kowm Details</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a></div>
 <div id="wrapper">
 <br />
 <br />
