--- a/kowm.html
+++ b/kowm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>kowm - kowm-details</title>
+<title>kowm - kowm Details</title>
 <style type="text/css" media="screen">@import "css/acol_base.css";</style>
 <meta charset="utf-8">
 </head>
@@ -9,7 +9,7 @@
 <div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html">Home Page</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm" id="current">kowm</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html">kowm Overview</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm.html" id="current">kowm Details</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core Overview</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts Overview</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a></div>
 <div id="wrapper">
 <br />
 <br />
