--- a/kowm.html
+++ b/kowm.html
@@ -84,18 +84,16 @@ kowm, upon it's release, will include the following...
 <div id='commits'></div>
 <br />
 <br />
-<center><a href="index.html">click here to go back to the main project page</a></center>
-<br />
-<br />
-<div class="breadcrumb">
-	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
-</div>
-<br />
 </div>
 <div class="footer">
-	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3" height="32px" /></a>
+	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<br />
 	<br />
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
+	<br />
+	<br />
+	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3">
+</div>
 </div>
 </body>
 </html>
