--- a/kowm.html
+++ b/kowm.html
@@ -34,35 +34,31 @@ After obtaining permission from him in 2007, I forked Mavosxwm v0.2.1 to use as 
 For the record, kowm itself stands for Kobol's Own Window Manager; in like manner all related icons, artwork, and documentation should reflect this.
 <br />
 <br />
-The modules themselves are to be named for the twelve colonies of man and various non-aligned colonies from the original Battlestar Galactica, circa 1978-1979.
-<br />
-<br />
 <h2>kowm</h2>
 <hr />
 <a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
 <br />
 <br />
+<h2>Requirements</h2>
 <br />
 kowm is licensed under the 3-clause BSD license whose text can be found <a href="http://kowm.acommitteeoflunatics.com/copyright.html">here</a>.
-<br />
-<br />
-<br />
-<br />
-kowm, upon it's release, will include the following...
+Any kowm installation will require, at a bare minimum, the first eight 'core' libraries; other requirments will be made known closer to initial release.
 <br />
 <br />
 <h2>kowm-core</h2>
 <hr />
-<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
+<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of eight modular desktop libraries; seven to handle the basic features that make for a beautifully simple window manager while the eighth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
 <br />
 <ul style="list-style-type:circle">
-<li>caprica provides low-level constructs shared by all 'windows'; including the root window.</li>
-<li>gemoni provide basic workspace management and functionality.</li>
-<li>leonis provides the graphics subsystem from which all graphics toolkit modules can hook into and manipulate objects.</li>
-<li>sagitara provides a basic module structure, attachment points and shared asset management funtions.</li>
-<li>piscera provides automatic menu generation of the system menu, the desktop menu and the application menus.</li>
-<li>virgon provides all remaining mid- and high-level 'window' management</li></ul>
+<li>baseAnnex provides a basic module infrastructure and shared asset management funtions.</li>
+<li>baseConsumer provides stubs and mount points for baseAnnex modules.</li>
+<li>baseDecor provides a basic graphics subsystem from which all graphics toolkit modules can hook into and manipulate objects.</li>
+<li>baseFare provides automatic menu generation of the system menu, the desktop menu and the application menus.</li>
+<li>baseFlaps provides a robust tabbing mechanism.</li>
+<li>baseGear provides simple constructs shared by all 'objects'; e.g. Spaces, Flaps and 'windows' (including the root window).</li>
+<li>baseOverseer provides advanced maniuplation of 'objects'; aka 'window' management.</li>
+<li>baseSpaces provide basic workspace management and functionality.</li></ul>
 <br />
 <br />
 <h2>kowm-opts</h2>
