--- a/kowm.html
+++ b/kowm.html
@@ -85,6 +85,9 @@ Any kowm installation will require, at a bare minimum, the first eight 'core' li
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br />
 	<br />
+	<a href="index.html">click here to go back to the main project page</a>
+	<br />
+	<br />
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
 	<br />
 	<br />
