fixing out of date content on index.html

--- a/index.html
+++ b/index.html
@@ -13,24 +13,22 @@
 <div id="wrapper">
 <br />
 <br />
-<br />
-<h1>kowm</h1>
+<h2>kowm</h2>
 <hr />
-<a href="http://kowm.acommitteeoflunatics.com/kowm.html">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we here at <i>a Committee of Lunatics</i> tend to agree.
+<a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
 <br />
+<br />
+<h2>Requirements</h2>
+<br />
+Any kowm installation will require, at a bare minimum, the first eight 'core' libraries; other requirments will be made known closer to initial release.
 <br />
 <br />
 kowm is licensed under the 3-clause BSD license whose text can be found <a href="http://kowm.acommitteeoflunatics.com/copyright.html">here</a>.
 <br />
 <br />
-<br />
-<br />
-kowm, upon it's release, will include the following...
-<br />
-<br />
 <h2>kowm-core</h2>
 <hr />
-<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
+<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of eight modular desktop libraries; seven to handle the basic features that make for a beautifully simple window manager while the eighth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
 <br />
 <h2>kowm-opts</h2>
