fixing out of date content on index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ kowm is licensed under the 3-clause BSD license whose text can be found <a href=
 <br />
 <h2>kowm-core</h2>
 <hr />
-<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of eight modular desktop libraries; seven to handle the basic features that make for a beautifully simple window manager while the eighth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
+<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of eight modular desktop libraries; seven to handle the basic features that make for a beautifully simple window manager while the eighth is a framework for building, attaching, and manipulating new modular extensions. Since execution speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
 <br />
 <h2>kowm-opts</h2>
