--- a/kowm.html
+++ b/kowm.html
@@ -31,9 +31,6 @@ I, like Martin, am quite insane; but I digress...
 After obtaining permission from him in 2007, I forked Mavosxwm v0.2.1 to use as the base from which I will write kowm. I will be recycling and rearranging some of its parts and pieces; these bits are, even now, making their way into various locations in kowm-core.
 <br />
 <br />
-For the record, kowm itself stands for Kobol's Own Window Manager; in like manner all related icons, artwork, and documentation should reflect this.
-<br />
-<br />
 <h2>kowm</h2>
 <hr />
 <a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
@@ -49,7 +46,7 @@ kowm is licensed under the 3-clause BSD license whose text can be found <a href=
 <br />
 <h2>kowm-core</h2>
 <hr />
-<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of eight modular desktop libraries; seven to handle the basic features that make for a beautifully simple window manager while the eighth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
+<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of eight modular desktop libraries; seven to handle the basic features that make for a beautifully simple window manager while the eighth is a framework for building, attaching, and manipulating new modular extensions. Since execution speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
 <br />
 <ul style="list-style-type:circle">
