bringing kowm in line with the rest of my sites

--- a/copyright.html
+++ b/copyright.html
@@ -9,7 +9,7 @@
 <div class="header"><img id="logo" src="images/logo-left.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="http://kowm.acommitteeoflunatics.com/index.html">kowm Overview</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm.html">kowm Details</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core Overview</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts Overview</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps Overview</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/index.html">home</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html">about kowm</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a>  |  <a href="http://kowm.acommitteeoflunatics.com/roadmap.html">roadmap</a></div>
 <div id="wrapper">
 <br />
 <br />
@@ -51,11 +51,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 <br />
 <br />
 <br />
-<br />
-<br />
-<br />
-<br />
-<br />
 </div>
 <div class="footer">
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
@@ -67,7 +62,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
 	<br />
 	<br />
-	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3">
+		<img id="html5-logo" src="images/HTML5_Logo_32.png" alt="This page contains valid HTML5">
+		<img id="css3-logo" src="images/CSS3_Logo_32.png" alt="This page contains valid CSS3">
+		<br clear="all">
+	</div>
 </div>
 </div>
 </body>
