--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>kowm - About kowm</title>
+<title>kowm - kowm Details</title>
 <style type="text/css" media="screen">@import "css/acol_light.css";</style>
 <meta charset="utf-8">
 </head>
@@ -9,8 +9,26 @@
 <div class="header"><img id="logo" src="images/logo-left.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">kowm Overview</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm.html">kowm Details</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core Overview</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts Overview</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps Overview</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/index.html">home</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">about kowm</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a>  |  <a href="http://kowm.acommitteeoflunatics.com/roadmap.html">roadmap</a></div>
 <div id="wrapper">
+<br />
+<br />
+<br />
+<h1>Introduction</h1>
+<hr />
+Having searched for many years for a usable Linux window manager that both appealed to my sense of aesthetics and had at least some of the features I feel necessary for a 'proper' WM; in all that time I only came across one which, at least partially, fit the bill.
+<br />
+<br />
+<a href="http://mavosxwm.sourceforge.net">mavosxwm</a> was the creation of Martin Vollrathson and hadn't been updated since sometime in 2003. The mavosxwm website, except for the outdated news page has long since stopped functioning; but below is the only image of the about page that I have managed to find. All information in the image, and in fact the image itself, can be considered his intellectual property and is used here only for informational purposes.
+<br />
+<br />
+<center><img class="noborder" src="images/mavosxwm-about.png" alt="about mavsoxwm"></center>
+<br />
+<br />
+I, like Martin, am quite insane; but I digress...
+<br />
+<br />
+After obtaining permission from him in 2007, I forked Mavosxwm v0.2.1 to use as the base from which I will write kowm. I will be recycling and rearranging some of its parts and pieces; these bits are, even now, making their way into various locations in kowm-core.
 <br />
 <br />
 <h2>kowm</h2>
@@ -47,10 +65,17 @@ kowm is licensed under the 3-clause BSD license whose text can be found <a href=
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br />
 	<br />
+	<a href="index.html">click here to go back to the main project page</a>
+	<br />
+	<br />
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
 	<br />
 	<br />
-	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3">
+	<div class="width">
+		<img id="html5-logo" src="images/HTML5_Logo_32.png" alt="This page contains valid HTML5">
+		<img id="css3-logo" src="images/CSS3_Logo_32.png" alt="This page contains valid CSS3">
+		<br clear="all">
+	</div>
 </div>
 </div>
 </body>
