--- a/index.html
+++ b/index.html
@@ -7,70 +7,74 @@
 </head>
 <body>
 <div class="header"><img id="logo" src="images/logo-left.png" alt="a Committee of Lunatics"></div>
-<br />
-<br />
+<br>
+<br>
 <div id="nav"><a href="http://www.acommitteeoflunatics.com/index.html">home</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">about kowm</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a>  |  <a href="http://kowm.acommitteeoflunatics.com/roadmap.html">roadmap</a></div>
 <div id="wrapper">
-<br />
-<br />
-<br />
+<br>
+<br>
+<br>
 <h1>Introduction</h1>
-<hr />
+<hr>
 Having searched for many years for a usable Linux window manager that both appealed to my sense of aesthetics and had at least some of the features I feel necessary for a 'proper' WM; in all that time I only came across one which, at least partially, fit the bill.
-<br />
-<br />
+<br>
+<br>
 <a href="http://mavosxwm.sourceforge.net">mavosxwm</a> was the creation of Martin Vollrathson and hadn't been updated since sometime in 2003. The mavosxwm website, except for the outdated news page has long since stopped functioning; but below is the only image of the about page that I have managed to find. All information in the image, and in fact the image itself, can be considered his intellectual property and is used here only for informational purposes.
-<br />
-<br />
+<br>
+<br>
 <center><img class="noborder" src="images/mavosxwm-about.png" alt="about mavsoxwm"></center>
-<br />
-<br />
+<br>
+<br>
 I, like Martin, am quite insane; but I digress...
-<br />
-<br />
+<br>
+<br>
 After obtaining permission from him in 2007, I forked Mavosxwm v0.2.1 to use as the base from which I will write kowm. I will be recycling and rearranging some of its parts and pieces; these bits are, even now, making their way into various locations in kowm-core.
-<br />
-<br />
+<br>
+<br>
 <h2>kowm</h2>
-<hr />
+<hr>
 <a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
-<br />
-<br />
+<br>
+<br>
 <h2>Requirements</h2>
-<br />
+<br>
 Any kowm installation will require, at a bare minimum, the first eight 'core' libraries; other requirments will be made known closer to initial release.
-<br />
-<br />
+<br>
+<br>
 kowm is licensed under the 3-clause BSD license whose text can be found <a href="http://kowm.acommitteeoflunatics.com/copyright.html">here</a>.
-<br />
-<br />
+<br>
+<br>
+kowm is divided into the following three projects
+<hr>
+<br>
+<br>
 <h2>kowm-core</h2>
-<hr />
+<hr>
 <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of eight modular desktop libraries; seven to handle the basic features that make for a beautifully simple window manager while the eighth is a framework for building, attaching, and manipulating new modular extensions. Since execution speed is of the essence here, we're planning on writing kowm-core in C++.
-<br />
-<br />
+<br>
+<br>
 <h2>kowm-opts</h2>
-<hr />
+<hr>
 <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a> ( /kōm-äpts/ ) currently has six additional modular libraries planned. These libraries - along with any others we think are needed - will provide additional services that, while not absolutely necessary, would probably be appreciated by the end user. These libraries will most likely be written in Ruby; however additional bindings for Python and Lua are currently on the RoadMap.
-<br />
-<br />
+<br>
+<br>
 <h2>kowm-apps</h2>
-<hr />
+<hr>
 <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a> ( /kōm-æps/ ) are, collectively, any apps written using the kowm libraries; these are usually intended to be optionally included with any working kowm-desktop if a user so desires. These will reside within the kowm-apps project. kowm-apps can use any language for which exists a language binding or a new one if you or a friend have the knowledge to write one; don't fret too much, it's not a difficult task. That being said, we definitely are expecting the first few to be all Ruby.
-<br />
-<br />
-<br />
+<br>
+<br>
+<br>
 </div>
 <div class="footer">
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
-	<br />
-	<br />
+	<br>
+	<br>
 	<a href="index.html">click here to go back to the main project page</a>
-	<br />
-	<br />
+	<br>
+	<br>
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
-	<br />
-	<br />
+	<br>
+	<br>
 	<div class="width">
 		<img id="html5-logo" src="images/HTML5_Logo_32.png" alt="This page contains valid HTML5">
 		<img id="css3-logo" src="images/CSS3_Logo_32.png" alt="This page contains valid CSS3">
