bringing kowm in line with the rest of my sites

--- a/old-index.html
+++ b/old-index.html
@@ -6,9 +6,8 @@
 <meta charset="utf-8">
 </head>
 <body>
+<div class="outer">
 <div class="header"><img id="logo" src="images/logo-left.png" alt="a Committee of Lunatics"></div>
-<br>
-<br>
 <div id="nav"><a href="http://www.acommitteeoflunatics.com/index.html">home</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html">about kowm</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com" id="current">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a>  |  <a href="http://kowm.acommitteeoflunatics.com/roadmap.html">roadmap</a></div>
 <div id="wrapper">
 <br>
